--- a/contact.html
+++ b/contact.html
@@ -16,13 +16,11 @@
           <label for="email">Email</label>
           <input type="email" name="email" class="form-control" id="fname" name="firstname" placeholder="Your email.." required>
 
-          <!--
           <label for="fname">First Name</label>
-          <input type="text" id="fname" name="firstname" placeholder="Your name..">
+          <input type="text" class="form-control" id="fname" name="firstname" placeholder="Your name.." required>
       
           <label for="lname">Last Name</label>
-          <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-          -->
+          <input type="text" class="form-control" id="lname" name="lastname" placeholder="Your last name.." required>
           
           <label for="subject">Message</label>
           <textarea type="email" name="subject" class="form-control" id="subject" placeholder="Write something.." style="height:200px" required></textarea>
