--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
 
   <nav class="header background-nav full-width-div sticky-top">
     <a class="logo" href=".page-top">ARC RENTALS</a>
-    <input class="menu-btn" type="checkbox" id="menu-btn" />
+    <input class="menu-btn" type="checkbox" id="menu-btn">
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <ul class="menu">
       <li><a href="index.html" class="link link-theme link-arrow active">Home</a></li>
