--- a/index.html
+++ b/index.html
@@ -17,19 +17,17 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body class="body">
-  <div>
-    <header class="header background-nav container-fluid full-width-div">
-      <a class="logo" href=".page-top">ARC RENTALS</a>
-      <input class="menu-btn" type="checkbox" id="menu-btn" />
-      <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-      <ul class="menu">
-        <li><a href="index.html" class="link link-theme link-arrow active">Home</a></li>
-        <li><a href="#two" class="link link-theme link-arrow">Service</a></li>
-        <li><a href="#three" class="link link-theme link-arrow">About Us</a></li>
-        <li><a href="contact.html" class="link link-theme link-arrow">Contact</a></li>
-      </ul>
-    </header>
-  </div>
+  <nav class="header background-nav full-width-div sticky-top">
+    <a class="logo" href=".page-top">ARC RENTALS</a>
+    <input class="menu-btn" type="checkbox" id="menu-btn">
+    <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+    <ul class="menu">
+      <li><a href="index.html" class="link link-theme link-arrow active">Home</a></li>
+      <li><a href="#two" class="link link-theme link-arrow">Service</a></li>
+      <li><a href="#three" class="link link-theme link-arrow">About Us</a></li>
+      <li><a href="contact.html" class="link link-theme link-arrow">Contact</a></li>
+    </ul>
+  </nav>
   
   <script>
     $('a').click(function(e){
