some home page and css work

--- a/index.html
+++ b/index.html
@@ -34,6 +34,46 @@
     </ul>
   </nav>
 
+
+  <div>
+    <section class="parallax-container parallax-container2">
+      <div class="home-heading">
+        <p>Arc Rentals</p>
+      </div>
+      <div>
+        <a href="order.html">
+          <button type="button" class="book-now-btn">Book Now</button>
+        </a>
+      </div>
+    </section>
+    <section class="buffer"></section>
+    <section class="buffer"></section>
+    <section class="buffer"></section>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <script>
       /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
       function myFunction() {
