Added booking to nav bar

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <ul class="menu">
       <li><a href="index.html" class="link link-theme link-arrow active">Home</a></li>
-      <li><a href="#two" class="link link-theme link-arrow">Service</a></li>
+      <li><a href="order.html" class="link link-theme link-arrow">Book Online</a></li>
       <li><a href="#three" class="link link-theme link-arrow">About Us</a></li>
       <li><a href="contact.html" class="link link-theme link-arrow">Contact</a></li>
     </ul>
@@ -50,29 +50,6 @@
     <section class="buffer"></section>
     <section class="buffer"></section>
   </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <script>
       /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
