added some files

--- a/index.html
+++ b/index.html
@@ -36,19 +36,46 @@
 
 
   <div>
-    <section class="parallax-container parallax-container2">
-      <div class="home-heading">
-        <p>Arc Rentals</p>
+    <div class="parallax-container parallax-container2">
+      <div>
+        <p class="home-heading">
+          Arc Rentals
+        </p>
       </div>
       <div>
+        <p class="home-subtext">
+          Cheap Reliable Rentals
+        </p>
+      </div>
+      <div class="home-section-btn">
         <a href="order.html">
-          <button type="button" class="book-now-btn">Book Now</button>
+          <button type="button" class="home-btn">Book Now</button>
         </a>
       </div>
+    </div>
+    <section class="buffer">
+      <p class="home-page-text">
+        Hello!
+        <a href="cars/cars.html">
+          <button type="button">See our fleet</button>
+        </a>
+      </p>
     </section>
     <section class="buffer"></section>
-    <section class="buffer"></section>
-    <section class="buffer"></section>
+    <section class="buffer footer">
+      <a href="faq.html">
+        <button type="button" class="faq">FAQs</button>
+      </a>
+      <a href="faq.html">
+        <button type="button" class="faq">About Us</button>
+      </a>
+      <a href="faq.html">
+        <button type="button" class="faq">Servies</button>
+      </a>
+      <a href="faq.html">
+        <button type="button" class="faq">Contact Us</button>
+      </a>
+    </section>
   </div>
 
     <script>
