moved cars out of the folder

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <section class="buffer">
       <p class="home-page-text">
         Hello!
-        <a href="cars/cars.html">
+        <a href="cars.html">
           <button type="button">See our fleet</button>
         </a>
       </p>
