added the page for mercedes

--- a/order.html
+++ b/order.html
@@ -78,6 +78,8 @@
 
         <label for="comment" id="contact-title">Anything you want to add?</label>
         <input type="text" class="form-control" id="comment" name="comment" placeholder="">
+
+        <input type="hidden" name="_autoresponse" value="Thank you for booking with us online. Here is a copy of your responses and we will get back to you soon.">
     
         <input type="submit" value="Submit">
     
