--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <ul class="menu">
       <li><a href="index.html" class="link link-theme link-arrow active nav-color">Home</a></li>
       <li><a href="order.html" class="link link-theme link-arrow nav-color">Book Online</a></li>
-      <li><a href="#three" class="link link-theme link-arrow nav-color">About Us</a></li>
+      <li><a href="about.html" class="link link-theme link-arrow nav-color">About Us</a></li>
       <li><a href="contact.html" class="link link-theme link-arrow nav-color">Contact</a></li>
     </ul>
   </nav>
