--- a/about.html
+++ b/about.html
@@ -22,17 +22,17 @@
 </head>
 <body class="body">
 
-  <nav class="header background-nav full-width-div sticky-top">
-    <a class="logo" href=".page-top">ARC RENTALS</a>
-    <input class="menu-btn" type="checkbox" id="menu-btn">
-    <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-    <ul class="menu">
-      <li><a href="index.html" class="link link-theme link-arrow active">Home</a></li>
-      <li><a href="order.html" class="link link-theme link-arrow">Book Online</a></li>
-      <li><a href="#three" class="link link-theme link-arrow">About Us</a></li>
-      <li><a href="contact.html" class="link link-theme link-arrow">Contact</a></li>
-    </ul>
-  </nav>
+    <nav class="header background-nav full-width-div sticky-top">
+        <a class="logo" href=".page-top">ARC RENTALS</a>
+        <input class="menu-btn" type="checkbox" id="menu-btn">
+        <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+        <ul class="menu">
+          <li><a href="index.html" class="link link-theme link-arrow active nav-color">Home</a></li>
+          <li><a href="order.html" class="link link-theme link-arrow nav-color">Book Online</a></li>
+          <li><a href="about.html" class="link link-theme link-arrow nav-color">About Us</a></li>
+          <li><a href="contact.html" class="link link-theme link-arrow nav-color">Contact</a></li>
+        </ul>
+    </nav>
 
     <script>
       /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
