mostly finished the cars pages

--- a/cars.html
+++ b/cars.html
@@ -35,27 +35,32 @@
   </nav>
 
   <div class="container fleet">
+    <div style="margin-bottom: 15px;" class="row">
+        <div class="col-md-12">
+            <h1 style="color: white;">View our fleet!</h1>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-4 car-box">
             <a href="cars/mercedes.html"><img class="rounded img-fluid" src="img/mercedes/img1.jpg" alt=""/></a>
             <a href="cars/mercedes.html"><p class="fleet-text">2011 Mercedes E350</p></a>
         </div>
         <div class="col-md-4 car-box">
-            <a href="cars/bmw-528.html"><img class="rounded img-fluid" src="img/mercedes/img1.jpg" alt=""/></a>
+            <a href="cars/bmw-528.html"><img class="rounded img-fluid" src="img/bmw-528/img1.jpg" alt=""/></a>
             <a href="cars/bmw-528.html"><p class="fleet-text">2012 BMW 528</p></a>
         </div>
         <div class="col-md-4 car-box">
-            <a href="cars/bmw-328.html"><img class="rounded img-fluid" src="img/mercedes/img1.jpg" alt=""/></a>
+            <a href="cars/bmw-328.html"><img class="rounded img-fluid" src="img/bmw-328/img1.jpg" alt=""/></a>
             <a href="cars/bmw-328.html"><p class="fleet-text">BMW 328 GT</p></a>
         </div>
     </div> <!--end of row-->
     <div class="row">
         <div class="col-md-4 car-box">
-            <a href="cars/chrysler-2015.html"><img class="rounded img-fluid" src="img/mercedes/img1.jpg" alt=""/></a>
+            <a href="cars/chrysler-2015.html"><img class="rounded img-fluid" src="img/chrysler-2015/img1.jpg" alt=""/></a>
             <a href="cars/chrysler-2015.html"><p class="fleet-text">2015 Chrysler 200</p></a>
         </div>
         <div class="col-md-4 car-box">
-            <a href="cars/chrysler-2012.html"><img class="rounded img-fluid" src="img/mercedes/img1.jpg" alt=""/></a>
+            <a href="cars/chrysler-2012.html"><img class="rounded img-fluid" src="img/chrysler-2012/img1.jpg" alt=""/></a>
             <a href="cars/chrysler-2012.html"><p class="fleet-text">2012 Chrysler 200</p></a>
         </div>
     </div> <!--end of row-->
