--- a/cars/mercedes.html
+++ b/cars/mercedes.html
@@ -27,10 +27,10 @@
     <input class="menu-btn" type="checkbox" id="menu-btn">
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <ul class="menu">
-      <li><a href="index.html" class="link link-theme link-arrow active nav-color">Home</a></li>
-      <li><a href="order.html" class="link link-theme link-arrow nav-color">Book Online</a></li>
-      <li><a href="about.html" class="link link-theme link-arrow nav-color">About Us</a></li>
-      <li><a href="contact.html" class="link link-theme link-arrow nav-color">Contact</a></li>
+        <li><a href="../index.html" class="link link-theme link-arrow active nav-color">Home</a></li>
+        <li><a href="../order.html" class="link link-theme link-arrow nav-color">Book Online</a></li>
+        <li><a href="../about.html" class="link link-theme link-arrow nav-color">About Us</a></li>
+        <li><a href="../contact.html" class="link link-theme link-arrow nav-color">Contact</a></li>
     </ul>
   </nav>
   
@@ -63,13 +63,13 @@
         </div>
         <div class="col-md-6 car-text">
             <h1 style="color: white">2011 Mercedes-Benz E350</h1>
+            <a href="../order.html"><button class="book-btn text-center" type="button" onclick="">Book Now!</button></a>
             <h4 style="color: white">Performance & MPG</h4>
             <ul style="color: white">
                 <li>18 mpg city/26 mpg highway and 21 mpg combined</li>
-                <li>Powered by  3.5-liter V6: 268 horsepower and 258 pound-feet of torque</li>
-                <li>Front side, pelvic, side curtain, and driver knee airbags</li>
-                <li>Attention Assist (for driver drowsiness)</li>
-                <li>PreSafe (anticpating crashes)</li>
+                <li>Powered by 3.5-liter V6: 268 horsepower and 258 pound-feet of torque</li>
+                <li>Zero to 60 mph in a 6.8 seconds</li>
+                <li>Seven-speed automatic transmission</li>
             </ul>
             <h4 style="color: white">Safety Features</h4>
             <ul style="color: white">
