--- a/cars/chrysler-2015.html
+++ b/cars/chrysler-2015.html
@@ -18,21 +18,73 @@
   <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Roboto&display=swap" rel="stylesheet">
 
   <!--Link to style sheet-->
-  <link href="css/style.css" rel="stylesheet">
+  <link href="../css/style.css" rel="stylesheet">
 </head>
 <body class="body">
 
-    <nav class="header background-nav full-width-div sticky-top">
-        <a class="logo" href=".page-top">ARC RENTALS</a>
-        <input class="menu-btn" type="checkbox" id="menu-btn">
-        <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-        <ul class="menu">
-          <li><a href="index.html" class="link link-theme link-arrow active nav-color">Home</a></li>
-          <li><a href="order.html" class="link link-theme link-arrow nav-color">Book Online</a></li>
-          <li><a href="about.html" class="link link-theme link-arrow nav-color">About Us</a></li>
-          <li><a href="contact.html" class="link link-theme link-arrow nav-color">Contact</a></li>
-        </ul>
-    </nav>
+  <nav class="header background-nav full-width-div sticky-top">
+    <a class="logo" href=".page-top">ARC RENTALS</a>
+    <input class="menu-btn" type="checkbox" id="menu-btn">
+    <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+    <ul class="menu">
+      <li><a href="../index.html" class="link link-theme link-arrow active nav-color">Home</a></li>
+      <li><a href="../order.html" class="link link-theme link-arrow nav-color">Book Online</a></li>
+      <li><a href="../about.html" class="link link-theme link-arrow nav-color">About Us</a></li>
+      <li><a href="../contact.html" class="link link-theme link-arrow nav-color">Contact</a></li>
+    </ul>
+  </nav>
+  
+
+  <div class="container car-gallery">
+    <div class="row">
+        <div class="col-md-6">
+            <section class="gallery">
+                <div class="gallery__item">
+                  <input type="radio" id="img-1" checked name="gallery" class="gallery__selector"/>
+                  <img class="gallery__img" src="../img/chrysler-2015/img1.jpg" alt=""/>
+                  <label for="img-1" class="gallery__thumb"><img src="../img/chrysler-2015/img1.jpg" alt=""/></label>
+                </div>
+                <div class="gallery__item">
+                  <input type="radio" id="img-2" name="gallery" class="gallery__selector"/>
+                  <img class="gallery__img" src="../img/chrysler-2015/img2.jpg" alt=""/>
+                  <label for="img-2" class="gallery__thumb"><img class="big-image" src="../img/chrysler-2015/img2.jpg" alt=""/></label>
+                </div>
+                <div class="gallery__item">
+                  <input type="radio" id="img-3" name="gallery" class="gallery__selector"/>
+                  <img class="gallery__img" src="../img/chrysler-2015/img3.jpg" alt=""/>
+                  <label for="img-3" class="gallery__thumb"><img src="../img/chrysler-2015/img3.jpg" alt=""/></label>
+                </div>
+                <div class="gallery__item">
+                  <input type="radio" id="img-4" name="gallery" class="gallery__selector"/>
+                  <img class="gallery__img" src="../img/chrysler-2015/img3.jpg" alt=""/>
+                  <label for="img-4" class="gallery__thumb"><img src="../img/chrysler-2015/img3.jpg" alt=""/></label>
+                </div>
+              </section>
+        </div>
+        <div class="col-md-6 car-text">
+            <h1 style="color: white">2015 Chrysler 200</h1>
+            <a href="../order.html"><button class="book-btn text-center" type="button" onclick="">Book Now!</button></a>
+            <h4 style="color: white">Performance & MPG</h4>
+            <ul style="color: white">
+                <li>23 mpg city/36 mpg highway and 28 mpg combined</li>
+                <li>Powered by 2.4-liter four-cylinder engine: 184 hp and 173 pound-feet of torque</li>
+                <li>Zero to 60 mph in a 6.2 seconds</li>
+                <li>Nine-speed automatic transmission</li>
+            </ul>
+            <h4 style="color: white">Safety Features</h4>
+            <ul style="color: white">
+                <li>Anitlock disk brakes</li>
+                <li>Stability and traction control</li>
+                <li>Front side, pelvic, side curtain, and driver/front-passenger knee airbags</li>
+                <li>Five stars awarded for overall side-impact protection</li>
+                <li>Four stars awarded for overall frontal-impact protection</li>
+            </ul>
+        </div>
+    </div>
+    <div class="row">
+
+    </div>
+  </div>
 
     <script>
       /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
