--- a/order.html
+++ b/order.html
@@ -39,10 +39,10 @@
     <form target="_blank" action="https://formsubmit.co/jutelifu@mailgolem.com" method="POST">
         <h3>Rental Rates</h3>
         <ul>
-            <li>$35 base rate per day (weekday)</li>
-            <li>$45 base rate per day (weekend)</li>
-            <li>$25 per day (renting for one week straight)</li>
-            <li>$20 per day (renting for two weeks straight)</li>
+            <li>$55 base rate per day (regular vehicles)</li>
+            <li>$70 base rate per day (luxury vehicles)</li>
+            <li>$35 per day (renting for one week straight)</li>
+            <li>For rentals longer than a week, price can be negotiated</li>
           </ul>
 
         <label for="email" id="contact-title">Email</label>
