--- a/cars.html
+++ b/cars.html
@@ -27,10 +27,11 @@
     <input class="menu-btn" type="checkbox" id="menu-btn">
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <ul class="menu">
-      <li><a href="index.html" class="link link-theme link-arrow active nav-color">Home</a></li>
-      <li><a href="order.html" class="link link-theme link-arrow nav-color">Book Online</a></li>
-      <li><a href="about.html" class="link link-theme link-arrow nav-color">About Us</a></li>
-      <li><a href="contact.html" class="link link-theme link-arrow nav-color">Contact</a></li>
+        <li><a href="index.html" class="link link-theme link-arrow active nav-color">Home</a></li>
+        <li><a href="order.html" class="link link-theme link-arrow nav-color">Book Online</a></li>
+        <li><a href="cars.html" class="link link-theme link-arrow nav-color">Our Fleet</a></li>
+        <li><a href="contact.html" class="link link-theme link-arrow nav-color">Contact Us</a></li>
+        <li><a href="faq.html" class="link link-theme link-arrow nav-color">FAQ</a></li>
     </ul>
   </nav>
 
