--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
   
 
   <div class="container container2" id="contact-form">
-    <form target="_blank" action="https://formsubmit.co/jutelifu@mailgolem.com" method="POST">
+    <form target="_blank" action="https://formsubmit.co/beepbeeprental@gmail.com" method="POST">
 
         <label for="email" id="contact-title">Email</label>
         <input type="email" name="email" class="form-control" id="fname" name="firstname" placeholder="example@email.com" required>
