--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 <body class="body">
 
     <nav class="header background-nav full-width-div sticky-top">
-        <a class="logo" href=".page-top">ARC RENTALS</a>
+        <a class="logo" href="index.html">ARC RENTALS</a>
         <input class="menu-btn" type="checkbox" id="menu-btn">
         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
         <ul class="menu">
