--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body class="body">
 
   <nav class="header background-nav full-width-div sticky-top">
-    <a class="logo" href=".page-top">ARC RENTALS</a>
+    <a class="logo" href="index.html">ARC RENTALS</a>
     <input class="menu-btn" type="checkbox" id="menu-btn">
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <ul class="menu">
@@ -37,30 +37,51 @@
 
   <div>
     <div class="parallax-container parallax-container2">
-      <div>
+      <div class="row">
         <p class="home-heading">
           Arc Rentals
         </p>
       </div>
-      <div>
+      <div class="row">
         <p class="home-subtext">
           Cheap Reliable Rentals
         </p>
       </div>
-      <div class="home-section-btn">
-        <a href="order.html">
-          <button type="button" class="home-btn">Book Now</button>
-        </a>
+      <div class="row">
+        <div class="home-section-btn col-md-6">
+          <a href="order.html">
+            <button type="button" class="home-book-btn">Book Now</button>
+          </a>
+        </div>
+        <div class="home-section-btn col-md-6">
+          <a href="cars.html">
+            <button type="button" class="home-book-btn">Our Fleet</button>
+          </a>
+        </div>
       </div>
     </div>
     <section class="buffer">
-      <p class="home-page-text">
-        Hello!
-        <a href="cars.html">
-          <button type="button">See our fleet</button>
-        </a>
-      </p>
+      <div class="container home-text">
+        <div class="row first-row">
+          <div class="col-md-6">
+            <h1 style="color: rgb(226, 218, 255)">Why ARC Rentals?</h1>
+              <p class="home-smalltxt">Car rentals for Purdue students by Purdue students</p>
+              <ul class="home-smalllist">
+                <li>You don't need to be 21 to rent</li>
+                <li>Affordable and Reliable</li>
+                <li>No young renter's fees</li>
+                <li>Conveniently located</li>
+                <li>No car insurance needed</li>
+              </ul>
+              <a href="order.html"><button class="book-btn text-center" type="button" onclick="">Book Now!</button></a>
+          </div>
+          <div class="col-md-6 img-home">
+            <img class="" src="img/logo.png" alt=""/>
+          </div>
+        </div>
+      </div>
     </section>
+    <!--
     <section class="buffer"></section>
     <section class="buffer footer">
       <a href="faq.html">
@@ -76,6 +97,8 @@
         <button type="button" class="faq">Contact Us</button>
       </a>
     </section>
+    -->
+  
   </div>
 
     <script>
