hopefully fixed home page

--- a/index.html
+++ b/index.html
@@ -38,14 +38,16 @@
   <div>
     <div class="parallax-container parallax-container2">
       <div class="row">
-        <p class="home-heading">
-          Arc Rentals
-        </p>
-      </div>
-      <div class="row">
-        <p class="home-subtext">
-          Cheap Reliable Rentals
-        </p>
+        <div class="col-md-12">
+          <p class="home-heading">
+            Arc Rentals
+          </p>
+        </div>
+        <div class="col-md-12">
+          <p class="home-subtext">
+            Cheap Reliable Rentals
+          </p>
+        </div>
       </div>
       <div class="row">
         <div class="home-section-btn col-md-6">
