--- a/index.html
+++ b/index.html
@@ -38,10 +38,16 @@
   <div>
     <div class="parallax-container parallax-container2">
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12 bigger-text">
           <p class="home-heading">
             Arc Rentals
           </p>
+        </div>
+        <div class="col-md-12 smaller-text">
+          <p class="home-heading-small">
+            Arc
+          </p>
+          <p class="home-heading-small">Rentals</p>
         </div>
         <div class="col-md-12">
           <p class="home-subtext">
