fixed typo home page

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <ul class="home-smalllist">
                 <li>You don't need to be 21 to rent</li>
                 <li>Affordable and Reliable</li>
-                <li>No young renter's fees</li>
+                <li>No young renter fees</li>
                 <li>Conveniently located</li>
                 <li>No car insurance needed</li>
               </ul>
