--- a/faq.html
+++ b/faq.html
@@ -34,6 +34,50 @@
       <li><a href="faq.html" class="link link-theme link-arrow nav-color">FAQ</a></li>
     </ul>
   </nav>
+
+  <div class="container faq-page" style="color: white">
+    <div class="row">
+      <h1 style="color: rgb(226, 218, 255)">FAQ</h1>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <h4>How do I check car availability?</h4>
+      </div>
+      <div class="col-md-12">
+        <ul><li>For now, you need to contact your representative for availability. We are currently working on a scheduling system</li></ul>
+      </div>
+      <div class="col-md-12">
+        <h4>Do you offer insurance coverage for rental vehicles?</h4>
+      </div>
+      <div class="col-md-12">
+        <ul><li>Yes we do offer full coverage with $1000 or $500 deductable, which means if you are at fault, the most you are going to pay is $1000</li></ul>
+      </div>
+      <div class="col-md-12">
+        <h4>What forms of payment do you accept?</h4>
+      </div>
+      <div class="col-md-12">
+        <ul><li>We accept credit cards, Cash App, or even cash</li></ul>
+      </div>
+      <div class="col-md-12">
+        <h4>How much do I need to put down as a deposit?</h4>
+      </div>
+      <div class="col-md-12">
+        <ul><li>If you have a Purdue ID we do not require a deposit. For those without a Purdue ID a deposit of $300 is required.</li></ul>
+      </div>
+      <div class="col-md-12">
+        <h4>How do I make a reservation for a rental vehicle?</h4>
+      </div>
+      <div class="col-md-12">
+        <ul><li>To make a reservation please fill out the rental vehicle form.</li></ul>
+      </div>
+      <div class="col-md-12">
+        <h4>Do you offer unlimited mileage for rentals?</h4>
+      </div>
+      <div class="col-md-12">
+        <ul><li>Yes</li></ul>
+      </div>
+    </div>
+  </div>
   
 
     <script>
